Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/022_function_missing_return_ifelse_else_return.xi
f(x:bool):int
{
    if (x) {
    } else {
        return 0
    }
}
//@PRACOWNIA
//@should_not_typecheck
